--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "homepage": "https://github.com/chern0us/pong#readme",
   "dependencies": {
-    "bg-canvases": "^1.1.10",
+    "bg-canvases": "^1.1.11",
+    "classnames": "^2.2.6",
     "lodash": "^4.17.11",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
